--- a/HTML/agradecimientos.html
+++ b/HTML/agradecimientos.html
@@ -145,18 +145,18 @@
                             </div>
                             <div class="col-2 d-none d-md-block"></div>
                             <div class="col-6 col-md-5 text-center mb-5">
-                                <h3>Cuento</h3>
+                                <h3>Piezas Gráficas</h3>
                                 <hr>
                                 <p>
+                                    Sebastián Angulo Quesada <br>
                                     José Ignacio Fernández Vargas <br>
-                                    Margarita Mata Quesada<br>
-                                    
+                                    Maria Paula Jacobo Méndez 
                                 </p>
                             </div>
 
 
                             <div class="col-6 col-md-5 text-center mb-5">
-                                <h3>Audiolibro</h3>
+                                <h3>Cuento/Audiolibro</h3>
                                 <hr>
                                 <p>
                                     Margarita Mata Quesada <br>
