--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                         <img src="IMG/Recursos/Murice.webp" class="animalitos d-none d-md-block transition" style="margin-left: 130vmin;">
                         <div class="row align-self-center " style="width: 100%;">
                             <div class="d-grid">
-                                <span class="text-end rounded-4 my-1 py-2 opcion opcion-func d-flex align-items-center opc-cont-sm opc-cont-md">
+                                <span class="text-end rounded-4 my-1 py-2 opcion opcion-func d-flex
+                                align-items-center opc-cont-sm opc-cont-md" onclick="location.href ='HTML/minijuegos.html'">
                                     <div class="d-flex align-items-center d-inline-block px-3">
                                         <a href="HTML/minijuegos.html" class="nav-link opc-titulo font-esp" style="margin-left: -35%;">Minijuegos</a>
                                         <img src="IMG/Recursos/IconMinijuegos.svg" class="icon opc-item" style="margin-left: 35%;">
@@ -53,7 +54,8 @@
                                 </span>
                             </div>
                             <div class="d-grid">
-                                <span class="text-end rounded-4 my-1 py-2 opcion opcion-func d-flex align-items-center opc-cont-sm opc-cont-md">
+                                <span class="text-end rounded-4 my-1 py-2 opcion opcion-func d-flex
+                                align-items-center opc-cont-sm opc-cont-md" onclick="location.href ='HTML/galeria.html'">
                                     <div class="d-flex align-items-center d-inline-block px-3">
                                         <a href="HTML/galeria.html" class="nav-link opc-titulo font-esp" style="margin-left: -60%;">Galeria</a>
                                         <img src="IMG/Recursos/IconGaleria.svg" class="icon opc-item" style="margin-left: 60%;">
@@ -61,7 +63,8 @@
                                 </span>
                             </div>
                             <div class="d-grid">
-                                <span class="text-end rounded-4 my-1 py-2 opcion opcion-func d-flex align-items-center opc-cont-sm opc-cont-md">
+                                <span class="text-end rounded-4 my-1 py-2 opcion opcion-func d-flex 
+                                align-items-center opc-cont-sm opc-cont-md" onclick="location.href ='HTML/agradecimientos.html'">
                                     <div class="d-flex align-items-center d-inline-block px-3">
                                         <a href="HTML/agradecimientos.html" class="nav-link opc-titulo font-esp" style="margin-left: -10%;">Agradecimientos</a>
                                         <img src="IMG/Recursos/IconCreditos.svg" class="icon opc-item" style="margin-left: 10%;">
