--- a/HTML/agradecimientos.html
+++ b/HTML/agradecimientos.html
@@ -160,7 +160,9 @@
                                 <hr>
                                 <p>
                                     Margarita Mata Quesada <br>
-                                    José Ignacio Fernández Vargas
+                                    José Ignacio Fernández Vargas <br>
+                                    Oscar Bolaños Morales<br>
+                                    Yared Guido Fallas
                                 </p>
                             </div>
                             <div class="col-2 d-none d-md-block"></div>
@@ -169,7 +171,7 @@
                                 <hr>
                                 <p>
                                     Nathalia Ugarte Jiménez <br>
-                                    José Ignacio Fernández Vargas
+                                    José Ignacio Fernández Vargas<br>
                                 </p>
                             </div>
 
