--- a/HTML/minijuegos/sopaLetras/index.html
+++ b/HTML/minijuegos/sopaLetras/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Prueba</title>
 </head>
-<body onload="handleLoad()" onmousedown="handleMouseDown()" onmouseup="handleMouseUp()">
+<body onload="handleLoad()" ontouchend="handleTouchEnd()" onmousedown="handleMouseDown()" onmouseup="handleMouseUp()" id="bodySopa">
 
     <div class="sopaContainer">
         <div>
-            <table id="sopaLetras">
+            <table id="sopaLetras" onTouchMove="hoverTouch(event)">
             </table>
             <div id="palabras">
                 <div id="palabrasL">
@@ -26,4 +26,7 @@
         </div>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+<script src="script.js"></script>
+
 </html>
