--- a/HTML/agradecimientos.html
+++ b/HTML/agradecimientos.html
@@ -56,7 +56,7 @@
                             <div class="col-12 text-center mb-5" ><h2>Equipo de ExpoTec</h2></div>
                             <div class="col-6 col-md-3 ">
                                 <div class="img-cont">
-                                    <img class="img-pfp " src="../IMG/Creditos/placeholder.webp" alt="" draggable="false">
+                                    <img class="img-pfp " src="../IMG/Creditos/SebastianAngulo.webp" alt="" draggable="false">
                                     <h3 class="px-2" style="font-size: 2.6vmin;">Sebastián Angulo Quesada</h3>
                                 </div>
                             </div>
@@ -68,7 +68,7 @@
                             </div>
                             <div class="col-6 col-md-3 ">
                                 <div class="img-cont">
-                                    <img class="img-pfp " src="../IMG/Creditos/placeholder.webp" alt="" draggable="false">
+                                    <img class="img-pfp " src="../IMG/Creditos/SilvanaMonge.webp" alt="" draggable="false">
                                     <h3 class="px-2" style="font-size: 2.6vmin;">Silvana Monge Hernández</h3>
                                 </div>
                             </div>
@@ -117,13 +117,13 @@
                             </div>
                             <div class="col-6 col-md-4">
                                 <div class="img-cont">
-                                    <img class="img-pfp " src="../IMG/Creditos/placeholder.webp" alt=" "draggable="false">
+                                    <img class="img-pfp " src="../IMG/Creditos/Melania.webp" alt=" "draggable="false">
                                     <h3 class="px-2" style="font-size: 2.6vmin;">Melania Pérez Mata</h3>
                                 </div>
                             </div>
                             <div class="col-6 offset-3 offset-md-0 col-md-4">
                                 <div class="img-cont">
-                                    <img class="img-pfp " src="../IMG/Creditos/placeholder.webp" alt=" "draggable="false">
+                                    <img class="img-pfp " src="../IMG/Creditos/MargaritaMata.webp" alt=" "draggable="false">
                                     <h3 class="px-2" style="font-size: 2.6vmin;">Margarita Mata Quesada</h3>
                                 </div>
                             </div>
