--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <!--Libro-->
                     <div class="col-12 col-md-7 p-3 d-flex justify-content-center align-items-center"style="height:80vmin; z-index: 5;">
                         <a href="HTML/cuento.html">
-                            <img class="img-fluid libro-index" src="IMG/Paginas/Pag1.png" >
+                            <img class="img-fluid libro-index" src="IMG/Paginas/PagArtboard1.webp" >
                         </a>
                     </div>
 
