--- a/TICS/dashboard.html
+++ b/TICS/dashboard.html
@@ -11,13 +11,17 @@
         .card{
             box-shadow: 0px 1px 5px #1d1c2977;
         }
+        .side-bar
+        {
+            background-color:#4e73df;
+        }
     </style>
     <div>
         <div class=""></div>
         <div class="container-fluid" style="overflow: hidden;">
             <div class="row">
                 <div class="col-2 d-none d-md-block">
-                    <div class="card" style="height: 96vh; margin-top: 2vh;">
+                    <div class="card side-bar" style="height: 96vh; margin-top: 2vh;">
                         
                     </div>
                 </div>
